# knowledge-base

./: LICENSE  README.md
2024下半年学习总结/: 2024下半年学习总结.md
2024夏RoboMaster视觉组入门/卡尔曼滤波实践/rosTask2/config/: armor_detector.yaml  camera.yaml
2024夏RoboMaster视觉组入门/卡尔曼滤波实践/rosTask2/src/armor_detector/src/: detector_node.cpp
2024夏RoboMaster视觉组入门/卡尔曼滤波实践/rosTask2/src/bringup/: package.xml
2024夏RoboMaster视觉组入门/卡尔曼滤波实践/rosTask2/src/bringup/launch/: bring_up.yaml
2024夏RoboMaster视觉组入门/卡尔曼滤波实践/rosTask2/src/video_camera/: CMakeLists.txt
2024夏RoboMaster视觉组入门/卡尔曼滤波实践/rosTask2/src/video_camera/launch/: video_camera_foxglove.yaml
2024夏RoboMaster视觉组入门/卡尔曼滤波实践/rosTask2/src/video_camera/src/: camera_node.cpp
2024夏RoboMaster视觉组入门/装甲板识别+数字识别/: Armor.h  ArmorDetector.cpp  ArmorNumClassifier.cpp  Readme.doc  homework.sln  homework.vcxproj.filters  main.cpp  matchArmors.cpp
2024夏RoboMaster视觉组入门/装甲板识别+数字识别/homework/x64/Debug/homework.tlog/: CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
2024夏RoboMaster视觉组入门/装甲板识别+数字识别/homework/x64/Release/: homework.exe.recipe  homework.iobj
2024夏RoboMaster视觉组入门/装甲板识别+数字识别/homework/x64/Release/homework.tlog/: CL.read.1.tlog  (+3 more)
2024夏RoboMaster视觉组入门/解算位姿并可视化/: PNP学习笔记.docx
Robomaster/: RM2025-队员赛季总结-卢祥云.md
Robomaster/2024夏RoboMaster视觉组入门/KalmanFilter/: KalmanFilter.md
Robomaster/2024夏RoboMaster视觉组入门/卡尔曼滤波实践/: 说明文档.docx
Robomaster/2024夏RoboMaster视觉组入门/装甲板识别+数字识别/: ArmorBox.cpp  LightBar.cpp  findLights.cpp  homework.vcxproj
Robomaster/2024夏RoboMaster视觉组入门/解算位姿并可视化/: 三维坐标变换学习笔记.docx
(+16 files in other folders)
